docs/v2.0.0/_sources/gallery/extras/plot_coupling_vs_NA.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/extras/plot_coupling_vs_NA.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_extras_plot_coupling_vs_NA.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_extras_plot_coupling_vs_NA.py:


Sphere: Coupling vs numerical aperture
======================================

.. GENERATED FROM PYTHON SOURCE LINES 8-9

Importing the package dependencies: numpy, PyMieSim

.. GENERATED FROM PYTHON SOURCE LINES 9-16

.. code-block:: Python

    import numpy as np

    from PyMieSim import experiment
    from PyMieSim import single
    from PyMieSim.units import degree, watt, AU, RIU, meter, nanometer
    from PyOptik import Material








.. GENERATED FROM PYTHON SOURCE LINES 17-18

Defining the source to be employed.

.. GENERATED FROM PYTHON SOURCE LINES 18-25

.. code-block:: Python

    source = experiment.source.Gaussian(
        wavelength=500 * nanometer,
        polarization=0 * degree,
        optical_power=1e-3 * watt,
        NA=0.2 * AU
    )








.. GENERATED FROM PYTHON SOURCE LINES 26-27

Defining the ranging parameters for the scatterer distribution

.. GENERATED FROM PYTHON SOURCE LINES 27-34

.. code-block:: Python

    scatterer = experiment.scatterer.Sphere(
        diameter=500e-9 * meter,
        property=Material.BK7,
        medium_property=1 * RIU,
        source=source
    )








.. GENERATED FROM PYTHON SOURCE LINES 35-36

Defining the detector to be employed.

.. GENERATED FROM PYTHON SOURCE LINES 36-44

.. code-block:: Python

    detector = experiment.detector.Photodiode(
        NA=np.linspace(0.1, 1.9, 150) * AU,
        phi_offset=0 * degree,
        gamma_offset=[0, 10] * degree,
        polarization_filter=None,
        sampling=2000 * AU
    )








.. GENERATED FROM PYTHON SOURCE LINES 45-46

Defining the experiment setup

.. GENERATED FROM PYTHON SOURCE LINES 46-48

.. code-block:: Python

    setup = experiment.Setup(scatterer=scatterer, source=source, detector=detector)








.. GENERATED FROM PYTHON SOURCE LINES 49-50

Measuring the properties

.. GENERATED FROM PYTHON SOURCE LINES 50-52

.. code-block:: Python

    dataframe = setup.get('coupling', drop_unique_level=True)








.. GENERATED FROM PYTHON SOURCE LINES 53-54

Plotting the results

.. GENERATED FROM PYTHON SOURCE LINES 54-72

.. code-block:: Python

    dataframe.plot_data(x='detector:NA')

    single_source = single.Gaussian(
        wavelength=950 * nanometer,
        polarization=0 * degree,
        optical_power=1e-3 * watt,
        NA=0.2 * AU
    )

    single_scatterer = single.scatterer.Sphere(
        diameter=500 * nanometer,
        property=Material.BK7,
        medium_property=1 * RIU,
        source=single_source
    )


    print(single_scatterer.Qsca * 1e-3)



.. image-sg:: /gallery/extras/images/sphx_glr_plot_coupling_vs_NA_001.png
   :alt: plot coupling vs NA
   :srcset: /gallery/extras/images/sphx_glr_plot_coupling_vs_NA_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    0.0010554068484482308





.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.472 seconds)


.. _sphx_glr_download_gallery_extras_plot_coupling_vs_NA.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_coupling_vs_NA.ipynb <plot_coupling_vs_NA.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_coupling_vs_NA.py <plot_coupling_vs_NA.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: plot_coupling_vs_NA.zip <plot_coupling_vs_NA.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
